[package]
name = "pyrand"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Volz <volzstefan97+pyrand@googlemail.com>"]
description = "Pure rust implementation of python's random module with compatible PRNG behaviour: seeding with equivalent values will yield identical PRNG output."
repository = "https://github.com/SV-97/pyrand"
license = "MIT OR Apache-2.0"
keywords = ["python", "random", "interop"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rand = { version = "0.8.5", optional = true }
num = { version = "0.4.1" }

[features]
default = ["rand"]
